ecmascript/parser/tests/test262-error-references/fail/d012888b0c720723.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/d012888b0c720723.js:1:1
  |
1 | ( { get x() {} } ) = 0
  | ^^^^^^^^^^^^^^^^^^

